# forelaesning_opgaver

./: CMakeLists.txt  cirkel areal eller omkreds.c  guessing game.c  hej.c  lecture10.c  lecture11.c  lecture6.c  lecture8.c  lecture9.c  lecture9.h  main.c  planet_file  trekant sidelængder.c
